[package]
name = "Scripture"
version = "0.1.0"
edition = "2021"

[dependencies]
# Existing dependencies
bindgen = "0.71.1"
duct = "0.13.7"
j4rs = "0.22.0"
jni = "0.21.1"
walkdir = "2.5.0"
zip = "2.2.2"

# New dependencies for enhanced functionality
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.7"
thiserror = "1.0"
tracing = "0.1"
dlopen = "0.1"
dlopen_derive = "0.1"

[dev-dependencies]
tempfile = "3.8"
tokio-test = "0.4"